# opti-extensions

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  NOTICE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  release.yaml  tests.yaml
docs/: make.bat
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/api_reference/: docplex_model_specific.rst  docplex_variables.rst  gurobipy_variables.rst  highspy_variables.rst  index.rst  index_sets.rst  parameters.rst  xpress_variables.rst
docs/source/installation/: index.rst
examples/: README.rst
examples/cplex_runseeds/: README.rst  example_eval_glass4.py
examples/cplex_tuner/: README.rst  example_tune_mik250.py  example_tune_p0033.py
examples/data_structures_overview/: README.rst  example_indexsets.py  example_paramdicts.py  example_vardicts.py
examples/model_building/: README.rst  example_build_diet.py  example_build_multicommodity.py  example_build_p_median.py
src/opti_extensions/: __init__.py  _dict_mixins.py  _index_sets.py  _misc_types.py  _pandas_accessors.py  _param_dicts.py  _var_dict_base.py
src/opti_extensions/docplex/: __init__.py  _model_funcs.py  _tuning_funcs.py  _var_dicts.py  _var_funcs.py
src/opti_extensions/gurobipy/: __init__.py  _var_dicts.py  _var_funcs.py
src/opti_extensions/highspy/: __init__.py  _var_dicts.py  _var_funcs.py
src/opti_extensions/xpress/: __init__.py  _var_dicts.py  _var_funcs.py
tests/functional_tests/: conftest.py  docplex_diet_test.py  docplex_multicommodity_test.py  gurobipy_diet_test.py  gurobipy_multicommodity_test.py  highspy_diet_test.py  highspy_multicommodity_test.py  xpress_diet_test.py  xpress_multicommodity_test.py
tests/typing_tests/: docplex_vardict1d.py  docplex_vardictNd.py  gurobipy_vardict1d.py  gurobipy_vardictNd.py  highspy_vardict1d.py  highspy_vardictNd.py  indexset1d.py  indexsetNd.py  paramdict1d.py  paramdictNd.py  xpress_vardict1d.py  xpress_vardictNd.py
tests/unit_tests/: _shared_constructor_and_attr_tests.py  _shared_custom_methods_tests.py  _shared_dict_methods_tests.py  _shared_dunder_item_tests.py  _shared_var_funcs_tests.py  _shared_vardictND_subset_selection_tests.py  conftest.py  helper_indexset.py
tests/unit_tests/docplex_model_funcs/: conftest.py  model_funcs_test.py  tuning_funcs_test.py
tests/unit_tests/docplex_var_dicts_funcs/: conftest.py  constructor_and_attr_test.py  custom_methods_test.py  dict_methods_test.py  dunder_item_test.py  var_funcs_test.py  vardictND_subset_selection_test.py
tests/unit_tests/gurobipy_var_dicts_funcs/: conftest.py  constructor_and_attr_test.py  custom_methods_test.py  dict_methods_test.py  dunder_item_test.py  var_funcs_test.py  vardictND_subset_selection_test.py
tests/unit_tests/highspy_var_dicts_funcs/: __init__.py  conftest.py  constructor_and_attr_test.py  custom_methods_test.py  dict_methods_test.py  dunder_item_test.py  var_funcs_test.py  vardictND_subset_selection_test.py
tests/unit_tests/index_sets/: add_test.py  conftest.py  constructor_and_attr_test.py  dunder_item_test.py  flatten_iterable_test.py  indexsetnd_cache_impl_test.py  indexsetnd_subset_selection_test.py  iteration_test.py  ordering_test.py  rich_comparison_test.py  seq_methods_test.py  set_ops_test.py
tests/unit_tests/pandas_accessors/: to_indexset_test.py  to_paramdict_test.py
tests/unit_tests/param_dicts/: conftest.py  constructor_and_attr_test.py  dict_methods_test.py  dunder_item_test.py  paramdict1d_custom_methods_test.py  paramdictND_subset_selection_test.py  paramdictNd_custom_methods_test.py
tests/unit_tests/xpress_var_dicts_funcs/: conftest.py  constructor_and_attr_test.py  custom_methods_test.py  dict_methods_test.py  dunder_item_test.py  var_funcs_test.py  vardictND_subset_selection_test.py
