[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-extensions"
description = """\
    A collection of custom data structures and user-friendly functions for mathematical \
    optimization modeling with DOcplex, gurobipy, Xpress, and highspy.\
"""
keywords = [
    "CPLEX",
    "DOcplex",
    "Gurobi",
    "gurobipy",
    "Xpress",
    "Highs",
    "highspy",
    "linear programming",
    "mixed integer programming",
    "optimization model",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Samarth Mistry", email = "samarth.mistry@gmail.com" }]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["typing_extensions>=4.10.0"]

[project.optional-dependencies]
solver-apis = [
    "cplex>=20.1.0.4",
    "docplex>=2.25.236",
    "gurobipy>=11.0.0",
    "xpress>=9.4.0",
    "highspy>=1.11.0",
]
tests = [
    "pytest>=8.1.1",
    "coverage>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-randomly>=3.15.0",
    "mypy[faster-cache]>=1.20,<=1.21",
    "pandas>=2.0.0,<3.0.0",            # for pandas accessor
    "pandas-stubs>=2.0.0,<3.0.0",      # for pandas accessor
]
docs = [
    "Sphinx==8.1.3",
    "sphinx-autosummary-accessors==2025.3.1",
    "ansys-sphinx-theme==1.4.5",
    "sphinx_design==0.6.1",
    "sphinx_gallery==0.19.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.1.0",
    "matplotlib==3.10.3",                     # for sphinx_gallery to run py fies
    "numpy==2.2.6",                           # for compatibility with matplotlib
    "pandas==2.3.3",                          # for pandas accessor
    "pandas-stubs==2.3.3.260113",             # for pandas accessor
    "numpydoc==1.10.0",
]
dev = [
    "ruff>=0.7.0",
    "prek>=0.3.0",
    "tox>=4.14.1",
    "tox-uv>=1.10.0",
    "opti-extensions[tests]",
    "opti-extensions[docs]",
]

[project.urls]
Homepage = "https://opti-extensions.readthedocs.io/"
Documentation = "https://opti-extensions.readthedocs.io/en/stable/#documentation"
"Source code" = "https://github.com/samarthmistry/opti-extensions/tree/main/src/opti_extensions"
Changelog = "https://github.com/samarthmistry/opti-extensions/releases"

[tool.setuptools.dynamic]
version = { attr = "opti_extensions.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opti_extensions = ["py.typed"]

###### ruff ######

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "D", "B", "UP", "FA"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "D212"]
"setup.py" = ["D100"]
"examples/*" = ["I001", "E501"]
"{docs,examples}/*" = ["E402"]
"{docs,tests,examples}/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

###### codespell ######

[tool.codespell]
ignore-words-list = "ElemT,VarT,sav"

###### numpydoc ######

[tool.numpydoc_validation]
checks = [
    "all",  # All checks except those below:
    "GL01", # Summary should start in the line immediately
    "ES01", # Extended summary not found
    "SA01", # 'See Also' section not found
    "EX01", # 'Examples' section not found
    "PR07", # Parameter has no description
    "RT03", # Return value has no description
]
exclude = [
    "\\.__",                        # Dunder methods
    "._create",                     # Dunder method impl
    "._setitem_idx",                # Dunder method impl
    "._setitem_slice",              # Dunder method impl
    "._get_repr_header",            # repr
    "._repr_pretty_",               # repr
    "SupportsGetItem",              # Protocol
    "_RAISE_KEYERROR",              # Dummy
    ".name",                        # property
    ".names",                       # property
    ".key_name",                    # property
    ".key_names",                   # property
    ".value_name",                  # property
    "MinimalRepresentationPrinter", # protocol
]
override_PR01 = [
    "^Not supported by ", # _param_dicts.ParamDictBase.update, .fromkeys
    #                     # _var_dicts.VarDictBase.pop, setdefault, .update, .fromkeys
    "^Solve a DOcplex model ", # _model_funcs.solve
]
override_PR02 = [
    "^Not supported by ", # _param_dicts.ParamDictBase.update, .fromkeys
    #                     # _var_dicts.VarDictBase.pop, setdefault, .update, .fromkeys
    "^Solve a DOcplex model ", # _model_funcs.solve
]
override_SS05 = [
    "^Preprocess ", # _var_funcs._preprocess_bound
]

###### mypy ######

[tool.mypy]
python_version = "3.10"
strict = true
follow_imports = "normal"
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = ["docplex.mp.*", "xpress.*", "highspy.*"]
ignore_missing_imports = true

###### pytest ######

[tool.pytest.ini_options]
addopts = """
    --doctest-modules
    --doctest-continue-on-failure
    --cov=opti_extensions
    --cov-report term-missing
    --randomly-seed=27
"""
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
testpaths = [
    "src",                    # doctests in source code
    "tests/unit_tests",
    "tests/functional_tests",
]


###### Coverage.py ######

[tool.coverage.report]
exclude_also = [
    "find_spec",             # untestable
    "def _get_repr_header",  # repr
    "def __repr__",          # repr
    "def _repr_pretty_",     # repr
    "except ImportError",    # optional dependency
    'class .*\bProtocol\):', # no runtime logic
]
